--- a/Data Cleaning and Feature Engineering.ipynb
+++ b/Data Cleaning and Feature Engineering.ipynb
@@ -5449,7 +5449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -5978,7 +5978,7 @@
        "24    Action Comedy  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6021,7 +6021,20 @@
     "    (df_movies['genres'] == 'Crime,Drama'),\n",
     "    (df_movies['genres'] == 'Biography,Drama,Sport'),\n",
     "    (df_movies['genres'] == 'Comedy,Crime,Drama'),\n",
-    "    (df_movies['genres'] == 'Adventure,Comedy,Family')\n",
+    "    (df_movies['genres'] == 'Adventure,Comedy,Family'),\n",
+    "    (df_movies['genres'] == 'Drama,Mystery,Thriller'),\n",
+    "    (df_movies['genres'] == 'Action,Sci-Fi,Thriller'),\n",
+    "    (df_movies['genres'] == 'Adventure,Comedy,Drama'),\n",
+    "    (df_movies['genres'] == 'Action,Adventure,Crime'),\n",
+    "    (df_movies['genres'] == 'Comedy,Family'),\n",
+    "    (df_movies['genres'] == 'Drama,Horror,Thriller'),\n",
+    "    (df_movies['genres'] == 'Comedy,Drama,Music'),\n",
+    "    (df_movies['genres'] == 'Drama,Music'),\n",
+    "    (df_movies['genres'] == 'Drama,Fantasy,Horror'),\n",
+    "    (df_movies['genres'] == 'Drama,Sport'),\n",
+    "    (df_movies['genres'] == 'Action,Mystery,Thriller'),\n",
+    "    (df_movies['genres'] == 'Action,Horror,Sci-Fi'),\n",
+    "    (df_movies['genres'] == 'Action,Drama,Sci-Fi')\n",
     "  \n",
     "]\n",
     "\n",
@@ -6030,7 +6043,9 @@
     "         'Action Drama', 'Documentary', 'Romantic Drama', 'Action Comedy', 'Horror Thriller', 'Action Fantasy',\n",
     "         'Action Drama', 'Thriller', 'Horror Thriller', 'Action Thriller', 'Thriller', 'Action Comedy', 'Biographical',\n",
     "         'Action Thriller', 'Horror', 'Biographical', 'Biographical', 'Drama', 'Animation', 'Action Thriller',\n",
-    "          'Family', 'Action Thriller', 'Horror', 'Biographical', 'Drama', 'Sports', 'Dramedy', 'Family'     \n",
+    "          'Family', 'Action Thriller', 'Horror', 'Biographical', 'Drama', 'Sports', 'Dramedy', 'Family', 'Thriller',\n",
+    "          'Action Sci-Fi', 'Dramedy', 'Action', 'Family', 'Horror Thriller', 'Music', 'Music', 'Horror',\n",
+    "          'Sports', 'Action Thriller', 'Horror', 'Action Sci-Fi'   \n",
     "         ] \n",
     "\n",
     "# create a new column and use np.select to assign values to it using our lists as arguments\n",
