--- a/Data Cleaning and Feature Engineering.ipynb
+++ b/Data Cleaning and Feature Engineering.ipynb
@@ -5197,6 +5197,174 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>start_year</th>\n",
+       "      <th>release_month</th>\n",
+       "      <th>movie</th>\n",
+       "      <th>runtime_minutes</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>production_budget_millions</th>\n",
+       "      <th>domestic_gross_millions</th>\n",
+       "      <th>worldwide_gross_millions</th>\n",
+       "      <th>net_profit_millions</th>\n",
+       "      <th>Genre</th>\n",
+       "      <th>Gross_to_Budget_Ratio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>May 20, 2011</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Pirates of the Caribbean: On Stranger Tides</td>\n",
+       "      <td>136.0</td>\n",
+       "      <td>Action,Adventure,Fantasy</td>\n",
+       "      <td>410.6</td>\n",
+       "      <td>241.1</td>\n",
+       "      <td>1,045.7</td>\n",
+       "      <td>635.1</td>\n",
+       "      <td>Action Fantasy</td>\n",
+       "      <td>2.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jun 7, 2019</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Dark Phoenix</td>\n",
+       "      <td>113.0</td>\n",
+       "      <td>Action,Adventure,Sci-Fi</td>\n",
+       "      <td>350.0</td>\n",
+       "      <td>42.8</td>\n",
+       "      <td>149.8</td>\n",
+       "      <td>-200.2</td>\n",
+       "      <td>Action Sci-Fi</td>\n",
+       "      <td>0.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>May 1, 2015</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Avengers: Age of Ultron</td>\n",
+       "      <td>141.0</td>\n",
+       "      <td>Action,Adventure,Sci-Fi</td>\n",
+       "      <td>330.6</td>\n",
+       "      <td>459.0</td>\n",
+       "      <td>1,403.0</td>\n",
+       "      <td>1,072.4</td>\n",
+       "      <td>Action Sci-Fi</td>\n",
+       "      <td>4.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Apr 27, 2018</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Avengers: Infinity War</td>\n",
+       "      <td>149.0</td>\n",
+       "      <td>Action,Adventure,Sci-Fi</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>678.8</td>\n",
+       "      <td>2,048.1</td>\n",
+       "      <td>1,748.1</td>\n",
+       "      <td>Action Sci-Fi</td>\n",
+       "      <td>6.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Nov 17, 2017</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Justice League</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>Action,Adventure,Fantasy</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>229.0</td>\n",
+       "      <td>655.9</td>\n",
+       "      <td>355.9</td>\n",
+       "      <td>Action Fantasy</td>\n",
+       "      <td>2.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   release_date  start_year  release_month  \\\n",
+       "0  May 20, 2011        2011              5   \n",
+       "1   Jun 7, 2019        2019              6   \n",
+       "2   May 1, 2015        2015              5   \n",
+       "3  Apr 27, 2018        2018              4   \n",
+       "4  Nov 17, 2017        2017             11   \n",
+       "\n",
+       "                                         movie  runtime_minutes  \\\n",
+       "0  Pirates of the Caribbean: On Stranger Tides            136.0   \n",
+       "1                                 Dark Phoenix            113.0   \n",
+       "2                      Avengers: Age of Ultron            141.0   \n",
+       "3                       Avengers: Infinity War            149.0   \n",
+       "4                               Justice League            120.0   \n",
+       "\n",
+       "                     genres  production_budget_millions  \\\n",
+       "0  Action,Adventure,Fantasy                       410.6   \n",
+       "1   Action,Adventure,Sci-Fi                       350.0   \n",
+       "2   Action,Adventure,Sci-Fi                       330.6   \n",
+       "3   Action,Adventure,Sci-Fi                       300.0   \n",
+       "4  Action,Adventure,Fantasy                       300.0   \n",
+       "\n",
+       "   domestic_gross_millions  worldwide_gross_millions  net_profit_millions  \\\n",
+       "0                    241.1                   1,045.7                635.1   \n",
+       "1                     42.8                     149.8               -200.2   \n",
+       "2                    459.0                   1,403.0              1,072.4   \n",
+       "3                    678.8                   2,048.1              1,748.1   \n",
+       "4                    229.0                     655.9                355.9   \n",
+       "\n",
+       "            Genre  Gross_to_Budget_Ratio  \n",
+       "0  Action Fantasy                    2.5  \n",
+       "1   Action Sci-Fi                    0.4  \n",
+       "2   Action Sci-Fi                    4.2  \n",
+       "3   Action Sci-Fi                    6.8  \n",
+       "4  Action Fantasy                    2.2  "
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#create gross to budget ratio column\n",
+    "df_movies['Gross_to_Budget_Ratio'] = df_movies['worldwide_gross_millions']/df_movies['production_budget_millions']\n",
+    "df_movies.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
    "outputs": [
@@ -5449,7 +5617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -5978,7 +6146,7 @@
        "24    Action Comedy  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6034,7 +6202,15 @@
     "    (df_movies['genres'] == 'Drama,Sport'),\n",
     "    (df_movies['genres'] == 'Action,Mystery,Thriller'),\n",
     "    (df_movies['genres'] == 'Action,Horror,Sci-Fi'),\n",
-    "    (df_movies['genres'] == 'Action,Drama,Sci-Fi')\n",
+    "    (df_movies['genres'] == 'Action,Drama,Sci-Fi'),\n",
+    "    (df_movies['genres'] == 'Action,Biography,Drama'),\n",
+    "    (df_movies['genres'] == 'Drama,Fantasy,Romance'),\n",
+    "    (df_movies['genres'] == 'Biography,Drama,Thriller'),\n",
+    "    (df_movies['genres'] == 'Crime,Thriller'),\n",
+    "    (df_movies['genres'] == 'Action,Fantasy,Horror'),\n",
+    "    (df_movies['genres'] == 'Drama,Music,Romance'),\n",
+    "    (df_movies['genres'] == 'Comedy,Crime'),\n",
+    "    (df_movies['genres'] == 'Crime,Drama,Horror')\n",
     "  \n",
     "]\n",
     "\n",
@@ -6045,7 +6221,9 @@
     "         'Action Thriller', 'Horror', 'Biographical', 'Biographical', 'Drama', 'Animation', 'Action Thriller',\n",
     "          'Family', 'Action Thriller', 'Horror', 'Biographical', 'Drama', 'Sports', 'Dramedy', 'Family', 'Thriller',\n",
     "          'Action Sci-Fi', 'Dramedy', 'Action', 'Family', 'Horror Thriller', 'Music', 'Music', 'Horror',\n",
-    "          'Sports', 'Action Thriller', 'Horror', 'Action Sci-Fi'   \n",
+    "          'Sports', 'Action Thriller', 'Horror', 'Action Sci-Fi', 'Biographical', 'Romantic Drama', 'Biographical',\n",
+    "          'Thriller', 'Horror', 'Music', 'Comedy', 'Horror'   \n",
+    "          \n",
     "         ] \n",
     "\n",
     "# create a new column and use np.select to assign values to it using our lists as arguments\n",
