--- a/Data Cleaning and Feature Engineering.ipynb
+++ b/Data Cleaning and Feature Engineering.ipynb
@@ -5611,7 +5611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -6166,13 +6166,13 @@
        "24                    3.0    Action Comedy  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Create Column to better define the different genres \n",
+    "#Create Column to better define the different genres (completed all w/ 4 or more so far)\n",
     "# create a list of our conditions\n",
     "conditions = [\n",
     "    (df_movies['genres'] == 'Drama'),\n",
@@ -6241,6 +6241,31 @@
     "    (df_movies['genres'] == 'Adventure,Comedy'),\n",
     "    (df_movies['genres'] == 'Comedy,Horror'),\n",
     "    (df_movies['genres'] == 'Biography,Drama,Music'),\n",
+    "    (df_movies['genres'] == 'Adventure,Comedy,Crime'),\n",
+    "    (df_movies['genres'] == 'Adventure,Drama,Fantasy'),\n",
+    "    (df_movies['genres'] == 'Action,Comedy,Horror'),\n",
+    "    (df_movies['genres'] == 'Biography,Drama,Family'),\n",
+    "    (df_movies['genres'] == 'Adventure,Drama,Family'),\n",
+    "    (df_movies['genres'] == 'Action,Animation,Comedy'),\n",
+    "    (df_movies['genres'] == 'Drama,Romance,Sci-Fi'),\n",
+    "    (df_movies['genres'] == 'Animation,Comedy,Family'),\n",
+    "    (df_movies['genres'] == 'Adventure,Biography,Drama'),\n",
+    "    (df_movies['genres'] == 'Biography,Drama,Romance'),\n",
+    "    (df_movies['genres'] == 'Action,Adventure,Biography'),\n",
+    "    (df_movies['genres'] == 'Action,Drama'),\n",
+    "    (df_movies['genres'] == 'Documentary,Music'),\n",
+    "    (df_movies['genres'] == 'Crime,Horror,Mystery'),\n",
+    "    (df_movies['genres'] == 'Comedy,Fantasy'),\n",
+    "    (df_movies['genres'] == 'Action,Comedy,Drama'),\n",
+    "    (df_movies['genres'] == 'Action,Drama,Fantasy'),\n",
+    "    (df_movies['genres'] == 'Action,Comedy,Romance'),\n",
+    "    (df_movies['genres'] == 'Action,Comedy,Sci-Fi'),\n",
+    "    (df_movies['genres'] == 'Thriller'),\n",
+    "    (df_movies['genres'] == 'Drama,History,War'),\n",
+    "    (df_movies['genres'] == 'Comedy,Drama,Fantasy'),\n",
+    "    (df_movies['genres'] == 'Drama,Romance,Thriller'),\n",
+    "    (df_movies['genres'] == 'Action,Crime,Sci-Fi'),\n",
+    "    (df_movies['genres'] == 'Horror,Sci-Fi,Thriller')\n",
     "  \n",
     "]\n",
     "\n",
@@ -6249,11 +6274,16 @@
     "         'Action Drama', 'Documentary', 'Romantic Drama', 'Action Comedy', 'Horror Thriller', 'Action Fantasy',\n",
     "         'Action Drama', 'Thriller', 'Horror Thriller', 'Action Thriller', 'Thriller', 'Action Comedy', 'Biographical',\n",
     "         'Action Thriller', 'Horror', 'Biographical', 'Biographical', 'Drama', 'Animation', 'Action Thriller',\n",
-    "          'Family', 'Action Thriller', 'Horror', 'Biographical', 'Drama', 'Sports', 'Dramedy', 'Family', 'Thriller',\n",
+    "          'Family', 'Action Thriller', 'Horror', 'Biographical', 'Drama', 'Biographical Sports', 'Dramedy', 'Family', 'Thriller',\n",
     "          'Action Sci-Fi', 'Dramedy', 'Action', 'Family', 'Horror Thriller', 'Music', 'Music', 'Horror',\n",
     "          'Sports', 'Action Thriller', 'Horror', 'Action Sci-Fi', 'Biographical', 'Romantic Drama', 'Biographical',\n",
     "          'Thriller', 'Horror', 'Music', 'Comedy', 'Horror', 'Family', 'Historical', 'Family', 'Sci-Fi', 'Sci-Fi Thriller',\n",
-    "          'Family', 'Animation', 'Comedy', 'Horror Comedy', 'Music'     \n",
+    "          'Family', 'Animation', 'Comedy', 'Horror Comedy', 'Biographical Music', 'Comedy', 'Fantasy', 'Horror Comedy',\n",
+    "          'Biographical', 'Family', 'Animation', 'Romantic Drama', 'Animation', 'Biographical', 'Romantic Drama',\n",
+    "          'Biographical', 'Action', 'Documentary', 'Horror', 'Comedy', 'Action Comedy', 'Action Fantasy', 'Action Comedy',\n",
+    "          'Action Comedy', 'Thriller', 'War', 'Comedy', 'Romantic Drama', 'Action Sci-Fi', 'Horror'      \n",
+    "          \n",
+    "          \n",
     "          \n",
     "         ] \n",
     "\n",
